--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.6",
+    "sass": "^1.89.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
