--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts"]
+  "exclude": ["vite.config.ts"]
 }
