--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@primeuix/themes": "^1.1.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.6",
+    "primevue": "^4.3.5",
     "sass": "^1.89.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
