--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@primeuix/themes": "^1.1.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.6",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.5",
     "sass": "^1.89.0",
     "vue": "^3.5.13",
